<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingVertical="10dp">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_arrow"
        android:minHeight="48dp"
        android:onClick="back"
        android:src="?attr/homeAsUpIndicator" />

    <TextView
        android:id="@+id/aboutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ABOUT"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

    <View
        android:id="@+id/settingsDivider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="10dp"
        android:background="?android:attr/listDivider" />

    <!-- WHO -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/WHO_TITLE"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WHO_CREATORS"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </LinearLayout>

    <!-- CODE BY -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CODE_BY_TITLE"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CODE_CREATORS"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </LinearLayout>

    <!-- DESIGN BY -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DESIGN_BY_TITLE"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DESIGN_CREATORS"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </LinearLayout>

</LinearLayout>