<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingVertical="10dp">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_arrow"
        android:minHeight="48dp"
        android:onClick="backToMainScreen"
        android:src="?attr/homeAsUpIndicator" />

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

    <View
        android:id="@+id/settingsDivider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="10dp"
        android:background="?android:attr/listDivider" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:stretchColumns="0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/colorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/COLOR_LABEL"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <RelativeLayout
                android:layout_width="144dp"
                android:layout_height="48dp">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray"
                    android:visibility="visible" />
                <View
                    android:id="@+id/display_color"
                    android:layout_width="142dp"
                    android:layout_height="46dp"
                    android:background="#DDDDDD"
                    android:onClick="openColorPicker"
                    android:visibility="visible"
                    android:layout_margin="1dp"
                    />
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/viewDistanceSettingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/distanceTextEdit"
                android:text="@string/VIEW_DISTANCE_LABEL"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <LinearLayout
                android:layout_width="144dp"
                android:layout_height="48dp">

                <EditText
                    android:id="@+id/distanceTextEdit"
                    android:layout_width="86dp"
                    android:layout_height="48dp"
                    android:inputType="number"
                    android:maxLength="5" />

                <TextView
                    android:id="@+id/distanceTextType"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/DISTANCE_TYPE"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>

        </TableRow>

    </TableLayout>

    <View
        android:id="@+id/settingsDivider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="10dp"
        android:background="?android:attr/listDivider" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:stretchColumns="0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/sendErrorLogsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ERROR_LOGS_LABEL"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Switch
                android:id="@+id/sendErrorSwitch"
                android:onClick="errorLogsChange"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </TableRow>

    </TableLayout>

    <View
        android:id="@+id/settingsDivider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="10dp"
        android:background="?android:attr/listDivider" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ABOUT"
        android:onClick="openAboutPage"/>

</LinearLayout>